--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "./bin/www"
   },
   "dependencies": {
-    "express": "3.5.1",
-    "bower": "~1.3.1"
+    "bower": "~1.3.1",
+    "express": "~4.9.0",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
+    "debug": "~2.0.0"
   }
 }
