--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.3",
-    "angular": "~1.3.8"
+    "angular": "~1.3.8",
+    "angular-route": "~1.3.8"
   }
 }
