Changed mochad library to read from the config
This really probably should refactored to have the config injected

--- a/public/config.json
+++ b/public/config.json
@@ -1,6 +1,7 @@
 {
     "mochad_host": "localhost",
     "mochad_port": 1099,
+    "mochad_type": "rf",
     "devices": [
         {
             "home_id": "a",
