--- a/app/config.json
+++ b/app/config.json
@@ -1,4 +1,5 @@
 {
+    "api_base_url": "http://localhost:3000",
     "mochad_host": "localhost",
     "mochad_port": 1099,
     "mochad_type": "rf",
