--- a/phonegap/.cordova/config.json
+++ b/phonegap/.cordova/config.json
@@ -1,10 +1,8 @@
 {
     "lib": {
         "www": {
-            "id": "com.phonegap.hello-world",
-            "version": "master",
-            "uri": "https://github.com/phonegap/phonegap-app-hello-world/archive/master.tar.gz",
-            "link": false
+            "url": "/Users/carpelucem/code/nodejs/HomeAutomator/public",
+            "link": true
         }
     }
 }
