--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "jquery": "~2.1.3",
     "angular": "~1.3.8",
     "angular-route": "~1.3.8",
-    "fastclick": "~1.0.3"
+    "fastclick": "~1.0.3",
+    "ngCordova": "~0.1.14-alpha"
   }
 }
