--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "~4.9.0",
     "grunt-node-webkit-builder": "^1.0.0",
     "morgan": "~1.3.0",
+    "parse": "^1.4.2",
     "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
